Make map controls more visible

--- a/examples/map.html
+++ b/examples/map.html
@@ -19,7 +19,8 @@
 		}
 
 		.mapbox-control-time {
-			padding-left: 40px;
+			padding: 20px;
+			background-color: white;
 		}
 	</style>
 	<title>Shade Map Mapbox example</title>
@@ -37,7 +38,7 @@
 					<button>
 						<a href="https://shademap.app/about" target="_blank">Get API key</a>
 					</button>
-					<span id="loader" style="background-color: #eee;padding: 3px;"></span>
+					<span id="loader" style="padding: 3px;"></span>
 				</div>
 			</div>
 		</div>
