--- a/examples/map.html
+++ b/examples/map.html
@@ -61,10 +61,19 @@
 		map.on('load', () => {
 			shadeMap = new ShadeMap({
 				date: now,
-				buildings: true,
 				color: '#01112f',
 				opacity: 0.7,
-				apiKey: "1e4a17816006654b9343b41818bae762cf33a5c393a92f0c919753f728a616a8",
+				tileSize: 256,
+				maxZoom: 15,
+				sourceUrl: ({ x, y, z }) => `https://s3.amazonaws.com/elevation-tiles-prod/terrarium/${z}/${x}/${y}.png`,
+				getElevation: ({ r, g, b }) => (r * 256 + g + b / 256) - 32768,
+				getFeatures: (map) => {
+					const buildingData = map.querySourceFeatures('composite', { sourceLayer: 'building' }).filter((feature) => {
+						return feature.properties && feature.properties.underground !== "true" && feature.properties.height
+					});
+					return buildingData;
+				},
+				apiKey: "eyJhbGciOiJIUzI1NiJ9.eyJlbWFpbCI6InRwcGlvdHJvd3NraUBzaGFkZW1hcC5hcHAiLCJjcmVhdGVkIjoxNjYyNDkzMDY2Nzk0LCJpYXQiOjE2NjI0OTMwNjZ9.ovCrLTYsdKFTF6TW3DuODxCaAtGQ3qhcmqj3DWcol5g",
 				debug: (msg) => { console.log(new Date().toISOString(), msg) }
 			}).addTo(map);
 
