--- a/examples/map.html
+++ b/examples/map.html
@@ -69,7 +69,7 @@
 				getElevation: ({ r, g, b }) => (r * 256 + g + b / 256) - 32768,
 				getFeatures: (map) => {
 					const buildingData = map.querySourceFeatures('composite', { sourceLayer: 'building' }).filter((feature) => {
-						return feature.properties && feature.properties.underground !== "true" && feature.properties.height
+						return feature.properties && feature.properties.underground !== "true" && feature.properties.render_height
 					});
 					return buildingData;
 				},
