--- a/examples/map.html
+++ b/examples/map.html
@@ -72,7 +72,7 @@
 				},
 				getFeatures: (map) => {
 					const buildingData = map.querySourceFeatures('composite', { sourceLayer: 'building' }).filter((feature) => {
-						return feature.properties && feature.properties.underground !== "true" && feature.properties.render_height
+						return feature.properties && feature.properties.underground !== "true" && feature.properties.height
 					});
 					return buildingData;
 				},
