--- a/examples/map.html
+++ b/examples/map.html
@@ -70,7 +70,7 @@
 					getSourceUrl: ({ x, y, z }) => `https://s3.amazonaws.com/elevation-tiles-prod/terrarium/${z}/${x}/${y}.png`,
 					getElevation: ({ r, g, b, a }) => (r * 256 + g + b / 256) - 32768,
 				},
-				getFeatures: (map) => {
+				getFeatures: () => {
 					const buildingData = map.querySourceFeatures('composite', { sourceLayer: 'building' }).filter((feature) => {
 						return feature.properties && feature.properties.underground !== "true" && (feature.properties.height || feature.properties.render_height)
 					});
