Update building examples, export ShadeMapOptions object

--- a/examples/map.html
+++ b/examples/map.html
@@ -44,6 +44,19 @@
 		</div>
 	</div>
 	<script>
+		const mapLoaded = (map) => {
+			return new Promise((res, rej) => {
+				function cb() {
+					if (!map.loaded()) {
+						return;
+					}
+					map.off("render", cb);
+					res();
+				}
+				map.on("render", cb);
+				cb();
+			});
+		};
 		/* Mapbox setup */
 		mapboxgl.accessToken = 'pk.eyJ1IjoidHBwaW90cm93c2tpIiwiYSI6ImNsNGVpdzMxYzAzenUzb28zYXZ4MXdlc2EifQ.M4IHx7SY0Wv5Zt6xzvKeBQ';
 		const map = new mapboxgl.Map({
@@ -70,7 +83,8 @@
 					getSourceUrl: ({ x, y, z }) => `https://s3.amazonaws.com/elevation-tiles-prod/terrarium/${z}/${x}/${y}.png`,
 					getElevation: ({ r, g, b, a }) => (r * 256 + g + b / 256) - 32768,
 				},
-				getFeatures: () => {
+				getFeatures: async () => {
+					await mapLoaded();
 					const buildingData = map.querySourceFeatures('composite', { sourceLayer: 'building' }).filter((feature) => {
 						return feature.properties && feature.properties.underground !== "true" && (feature.properties.height || feature.properties.render_height)
 					});
