--- a/examples/map.html
+++ b/examples/map.html
@@ -84,7 +84,7 @@
 					getElevation: ({ r, g, b, a }) => (r * 256 + g + b / 256) - 32768,
 				},
 				getFeatures: async () => {
-					await mapLoaded();
+					await mapLoaded(map);
 					const buildingData = map.querySourceFeatures('composite', { sourceLayer: 'building' }).filter((feature) => {
 						return feature.properties && feature.properties.underground !== "true" && (feature.properties.height || feature.properties.render_height)
 					});
