Clarify full day sun exposure

--- a/examples/map.html
+++ b/examples/map.html
@@ -55,7 +55,7 @@
 					<button id="increment">+1 hour</button>
 					<button id="play">Play</button>
 					<button id="stop">Stop</button>
-					<label><input id="exposure" type="checkbox" autocomplete="off" />24 hour sun exposure</label>
+					<label><input id="exposure" type="checkbox" autocomplete="off" />Full-day sun exposure</label>
 					<button>
 						<a href="https://shademap.app/about" target="_blank">Get API key</a>
 					</button>
