--- a/examples/map.html
+++ b/examples/map.html
@@ -161,21 +161,24 @@
 			clearInterval(intervalTimer);
 			const target = e.target;
 			if (!target.checked) {
-				shadeMap && shadeMap.setShowExposure(false);
+				shadeMap && shadeMap.setSunExposure(false);
 				increment.disabled = false;
 				decrement.disabled = false;
 				play.disabled = false;
 				stop.disabled = false;
 				exposureGradientContainer.style.display = 'none';
 			} else {
-				shadeMap && shadeMap.setShowExposure(true);
+				const { lat, lng } = map.getCenter();
+				const { sunrise, sunset } = SunCalc.getTimes(now, lat, lng);
+				shadeMap && shadeMap.setSunExposure(true, {
+					startDate: sunrise,
+					endDate: sunset
+				});
 				increment.disabled = true
 				decrement.disabled = true;
 				play.disabled = true;
 				stop.disabled = true;
 
-				const { lat, lng } = map.getCenter();
-				const { sunrise, sunset } = SunCalc.getTimes(now, lat, lng);
 				const hours = (sunset - sunrise) / 1000 / 3600;
 				const partial = hours - Math.floor(hours);
 				const html = [];
