--- a/examples/map.html
+++ b/examples/map.html
@@ -108,6 +108,7 @@
 					tileSize: 256,
 					getSourceUrl: ({ x, y, z }) => `https://s3.amazonaws.com/elevation-tiles-prod/terrarium/${z}/${x}/${y}.png`,
 					getElevation: ({ r, g, b, a }) => (r * 256 + g + b / 256) - 32768,
+					_overzoom: 18,
 				},
 				getFeatures: async () => {
 					await mapLoaded(map);
