Add maplibre example

--- a/examples/map.html
+++ b/examples/map.html
@@ -89,6 +89,7 @@
 			style: 'mapbox://styles/mapbox/streets-v11',
 			center: { lng: -122.18578164139899, lat: 47.694878957368815 },
 			zoom: 8, // starting zoom
+			hash: true
 		});
 		/* End Mapbox setup */
 
