--- a/examples/maplibre.html
+++ b/examples/maplibre.html
@@ -84,6 +84,11 @@
             });
         };
         /* Maplibregl setup */
+        maplibregl.setRTLTextPlugin(
+            'https://unpkg.com/@mapbox/mapbox-gl-rtl-text@0.2.3/mapbox-gl-rtl-text.min.js',
+            true // Lazy load the plugin
+        );
+
         const map = new maplibregl.Map({
             container: 'mapid',
             style: {
