Update protomaps configuration in map libre.html

--- a/examples/maplibre.html
+++ b/examples/maplibre.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='https://unpkg.com/maplibre-gl@4.1.0/dist/maplibre-gl.css' />
     <script src='https://unpkg.com/maplibre-gl@4.1.0/dist/maplibre-gl.js'></script>
     <script src='https://www.unpkg.com/suncalc@1.9.0/suncalc.js'></script>
-    <script src='https://unpkg.com/protomaps-themes-base@2.0.0-alpha.5/dist/index.js'></script>
+    <script src='https://unpkg.com/protomaps-themes-base@4.3.0/dist/index.js'></script>
     <script src="../dist/mapbox-gl-shadow-simulator.umd.min.js"></script>
     <style>
         body {
@@ -106,7 +106,7 @@
                         maxzoom: 15,
                     }
                 },
-                layers: protomaps_themes_base.default("protomaps", "light")
+                layers: protomaps_themes_base.default("protomaps", "light", "en")
             },
             maplibreLogo: true,
             center: { lng: -122.18578164139899, lat: 47.694878957368815 },
