--- a/examples/markers-maplibre.html
+++ b/examples/markers-maplibre.html
@@ -24,28 +24,6 @@
       padding: 20px;
       background-color: white;
     }
-
-    #exposure-gradient-container {
-      display: none;
-      background-color: white;
-      padding: 0 10px 5px;
-    }
-
-    #exposure-gradient {
-      height: 20px;
-      background-image: linear-gradient(to right,
-          rgb(0 0 255/ 0.5),
-          rgb(0 255 0 / 0.5),
-          rgb(255 0 0 / 0.5));
-      display: flex;
-    }
-
-    #exposure-gradient>div {
-      flex: 1;
-      border: 1px solid white;
-      text-align: center;
-      font-weight: bold;
-    }
   </style>
   <title>mapbox-gl-shadow-simulator Maplibre Markers Example</title>
 </head>
@@ -59,15 +37,10 @@
           <button id="increment">+1 hour</button>
           <button id="play">Play</button>
           <button id="stop">Stop</button>
-          <label><input id="exposure" type="checkbox" autocomplete="off" />Full-day sun exposure</label>
           <button>
             <a href="https://shademap.app/about" target="_blank">Get API key</a>
           </button>
           <span id="loader" style="padding: 3px"></span>
-        </div>
-        <div id="exposure-gradient-container">
-          <div>Hours of sunlight</div>
-          <div id="exposure-gradient"></div>
         </div>
       </div>
     </div>
@@ -146,14 +119,7 @@
 
     /* ShadeMap setup */
     const loaderEl = document.getElementById("loader");
-    let now = new Date(
-      SunCalc.getTimes(
-        new Date(),
-        47.694878957368815,
-        -122.18578164139899
-      ).sunrise.getTime() +
-      60 * 60 * 1000
-    );
+    let now = new Date(1633362188054);
     let shadeMap;
     map.on("load", () => {
       shadeMap = new ShadeMap({
@@ -228,11 +194,6 @@
     const decrement = document.getElementById("decrement");
     const play = document.getElementById("play");
     const stop = document.getElementById("stop");
-    const exposure = document.getElementById("exposure");
-    const exposureGradientContainer = document.getElementById(
-      "exposure-gradient-container"
-    );
-    const exposureGradient = document.getElementById("exposure-gradient");
 
     increment.addEventListener(
       "click",
@@ -261,41 +222,6 @@
 
     stop.addEventListener("click", () => {
       clearInterval(intervalTimer);
-    });
-
-    exposure.addEventListener("click", (e) => {
-      clearInterval(intervalTimer);
-      const target = e.target;
-      if (!target.checked) {
-        shadeMap && shadeMap.setSunExposure(false);
-        increment.disabled = false;
-        decrement.disabled = false;
-        play.disabled = false;
-        stop.disabled = false;
-        exposureGradientContainer.style.display = "none";
-      } else {
-        const { lat, lng } = map.getCenter();
-        const { sunrise, sunset } = SunCalc.getTimes(now, lat, lng);
-        shadeMap &&
-          shadeMap.setSunExposure(true, {
-            startDate: sunrise,
-            endDate: sunset,
-          });
-        increment.disabled = true;
-        decrement.disabled = true;
-        play.disabled = true;
-        stop.disabled = true;
-
-        const hours = (sunset - sunrise) / 1000 / 3600;
-        const partial = hours - Math.floor(hours);
-        const html = [];
-        for (let i = 0; i < hours; i++) {
-          html.push(`<div>${i + 1}</div>`);
-        }
-        html.push(`<div style="flex: ${partial}"></div>`);
-        exposureGradientContainer.style.display = "block";
-        exposureGradient.innerHTML = html.join("");
-      }
     });
     /* End controls setup */
   </script>
